# Kijang

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
inc/kijangProtocol/: kijangprotocol.h
lib/: kijangProtocol-debug.lib  kijangProtocol-release.lib
res/pages/: Home.qml  Input.qml  Logs.qml  Outputs.qml  Plugins.qml  Security.qml  Settings.qml
src/: kijangplugin.cpp  kijangplugin.h  kijangpluginwrapper.cpp  kijangpluginwrapper.h  main.cpp
src/application/: kijang.cpp  kijang.h  kijangapp.cpp  kijangapp.h  kijanglogger.cpp  kijanglogger.h  kijangpluginmanager.cpp  kijangpluginmanager.h  kijangpluginwrapper.cpp  kijangpluginwrapper.h  kijangsettings.cpp  kijangsettings.h
src/input/: audioinput.cpp  audioinput.h  kijanginputmanager.cpp  kijanginputmanager.h  kinect360input.cpp  kinect360input.h  kinectoneinput.cpp  kinectoneinput.h  microphoneinput.cpp  microphoneinput.h  motioninput.cpp  motioninput.h  pilandukaudioinput.cpp  pilandukaudioinput.h  pilandukmotioninput.cpp  pilandukmotioninput.h  pilandukvideoinput.cpp  pilandukvideoinput.h  videoinput.cpp  videoinput.h  webcaminput.cpp  webcaminput.h
src/network/: communicationclient.cpp  communicationclient.h  kijangmodule.cpp  kijangmodule.h  kijangmodulehandler.cpp  kijangmodulehandler.h  kijangnetworkmanager.cpp  kijangnetworkmanager.h  kijangreadserver.cpp  kijangreadserver.h  kijangstatusserver.cpp  kijangstatusserver.h  kijangtcpserver.cpp  kijangtcpserver.h  kijangwriteserver.cpp  kijangwriteserver.h  readclient.cpp  readclient.h  servercontrolmodule.cpp  servercontrolmodule.h  statusclient.cpp  statusclient.h  udpaudiolistener.cpp  udpaudiolistener.h  udpaudiooutput.cpp  udpaudiooutput.h  udpfilelistener.cpp  udpfilelistener.h  udplistenerinterface.cpp  udplistenerinterface.h  udpmotionlistener.cpp  udpmotionlistener.h  udpmotionoutput.cpp  udpmotionoutput.h  udpoutputinterface.cpp  udpoutputinterface.h  udpvideolistener.cpp  udpvideolistener.h  udpvideooutput.cpp  udpvideooutput.h  (+2 more)
